# EvalSurfer

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  action.yml  dataset.schema.json  framework.json  framework.yaml  install-skill.sh  pyproject.toml  report.schema.json
.cursor/: mcp.json
.github/workflows/: README.md  ci.yml  publish.yml
assets/: README.md
docs/: CHANGELOG.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  anti-patterns.md  cimaa-inconsistencies.md  failure-modes.md  governance-mapping.md  mcp.md
docs/design/: harness-invariance.md
evalsurfer/: README.md  __init__.py  constants.py  mcp_models.py  mcp_server.py
evalsurfer/adapters/: README.md  __init__.py  langsmith.py  promptfoo.py
evalsurfer/analysis/: README.md  __init__.py
evalsurfer/assurance/: README.md  __init__.py
evalsurfer/calibration/: README.md  __init__.py  agreement.py
evalsurfer/cli/: README.md  __init__.py  agreement.py  dataset.py  main.py  metrics.py  plan.py  quality.py
evalsurfer/constants/: README.md  __init__.py  adapters.py  calibration.py  categories.py  dataset.py  diagnostics.py  framework.py  operational.py  pillars.py  policy.py  quality.py  rubric.py  safety.py  scoring.py  signals.py  trajectory.py
evalsurfer/core/: README.md  __init__.py  evaluate.py  planner.py  report.py  scoring.py
evalsurfer/dataset/: __init__.py  case.py  contamination.py  dataset.py
evalsurfer/diagnostics/: README.md  __init__.py  bundle.py  explainability.py  failure_map.py  golden_set.py  personas.py  profiles.py  regression.py  review_gate.py
evalsurfer/interface/: README.md  __init__.py  pipeline.py
evalsurfer/mcp/: __init__.py  instance.py  models.py  server.py
evalsurfer/metrics/: README.md  __init__.py
evalsurfer/operational/: README.md  __init__.py  metrics.py  slo.py
evalsurfer/policy/: README.md  __init__.py  guardrails.py
evalsurfer/quality/: __init__.py  matching.py  text.py  tokenize.py
evalsurfer/safety/: README.md  __init__.py
evalsurfer/trajectory/: README.md  __init__.py  agent_trace.py
examples/: README.md  agent_trace.json  changed_files.txt  guardrails.json  redteam_outputs.json  report.json  report_before.json  sample.json  traces.json
examples/adapters/: README.md  langsmith_runs.json  otel_spans.json  promptfoo_results.json  ragas_metrics.json  run.py
examples/golden/: README.md  calibration.json
examples/judge/: README.md  llm_judge.py  mock_scores.json  qa_pairs.json
examples/mcp/: README.md
examples/plan/: README.md  agent.json  answer_only.json  rag.json
examples/scenarios/: 01_vitalsai_request.json  02_ledgeragent_redteam_outputs.json  02_ledgeragent_trajectory.json  (+10 more)
npm/: README.md  package.json
skills/: README.md
spec/: dataset.schema.json  framework.json  framework.yaml  report.schema.json
stories/: 0001-average-washed-critical.md  0002-rubber-stamp-judge.md  0003-overzealous-denylist.md  README.md  TEMPLATE.md
tests/: README.md  __init__.py  test_agent_trace.py  test_agreement.py  test_calibrate.py  test_cli_main.py  test_dataset_schema.py  test_evaluate.py  test_evidence.py  test_maturity.py  test_mcp_server.py  test_operational_metrics.py  test_personas.py  test_planner.py  test_profiles.py  test_quality_cli.py  test_reference.py  test_regression.py  test_report_schema.py  test_review_gate.py  test_root_cause.py  test_scoring.py  test_skill_parity.py  test_slo.py
(+220 files in other folders)
